[gd_scene load_steps=5 format=2]

[ext_resource path="res://workspace/assets/scenes/partglossy.obj" type="ArrayMesh" id=1]
[ext_resource path="res://workspace/assets/scenes/part.gd" type="Script" id=2]
[ext_resource path="res://workspace/assets/materials/brick.tres" type="Material" id=4]

[sub_resource type="BoxShape" id=1]

[node name="Part" type="StaticBody"]

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = ExtResource( 1 )
material/0 = ExtResource( 4 )
material/1 = ExtResource( 4 )
material/2 = ExtResource( 4 )
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 1 )

[connection signal="input_event" from="Area" to="MeshInstance" method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Area" to="MeshInstance" method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="MeshInstance" method="_on_Area_mouse_exited"]
